[gd_scene load_steps=2 format=3 uid="uid://7li133syg6v0"]

[ext_resource type="Script" path="res://Scripts/Global/Configuration/ConfigWidget/ConfigWidget.gd" id="1_eqk6x"]

[node name="ConfigWidget" type="PanelContainer"]
offset_right = 55.0
offset_bottom = 27.0
script = ExtResource("1_eqk6x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LabelReset" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LabelReset"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/LabelReset/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Camera Screen Shake"
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/LabelReset/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
size_flags_horizontal = 3
text = "Camera Screen Shake"

[node name="BtnReset" type="Button" parent="MarginContainer/VBoxContainer/LabelReset"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
text = "Reset"

[node name="Slider" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Slider"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tick_count = 5

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/Slider"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "100%"
alignment = 1

[connection signal="toggled" from="MarginContainer/VBoxContainer/LabelReset/HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LabelReset/BtnReset" to="." method="_on_btn_reset_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Slider/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/Slider/LineEdit" to="." method="_on_line_edit_text_submitted"]
